--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sanity/client": "^6.1.3",
-    "@sanity/image-url": "^1.0.2",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -27,7 +25,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sanity": "^3.12.2",
+    "sanity": "^3.13.0",
+    "styled-components": "^6.0.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
