--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^1.54.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
@@ -27,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.13.0",
+    "stripe": "^12.11.0",
     "styled-components": "^6.0.1",
     "swiper": "^9.4.1",
     "tailwind-merge": "^1.13.2",
