--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^1.54.1",
+    "@t3-oss/env-nextjs": "^0.6.0",
     "@uploadthing/react": "^5.1.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -33,16 +34,13 @@
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.252.0",
     "next": "13.4.7",
-    "next-sanity": "^5.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.1",
-    "sanity": "^3.13.0",
     "stripe": "^12.11.0",
-    "styled-components": "^6.0.1",
     "swiper": "^9.4.1",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
