--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@portabletext/react": "^3.0.4",
-    "@prisma/client": "^4.16.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -54,7 +53,6 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.16.2"
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
