--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.252.0",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
